--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
            <h3>Previous Projects</h3>
         <div class="col three first"><a href="projgutenberg.html"><img src="img/guten/Untitled-1.jpg" alt="Work Preview 1"></a></div>
         <div class="col three"><a href="queuecount.html"><img src="img/qc/Untitled-1.jpg" alt="Work Preview 2"></a></div>
-        <div class="col three last"><a href="socialsolent.html"><img src="img/social/socialsolentbox.jpg" alt="Work Preview 3"></a></div>
+        <div class="col three last"><a href="socialsolent.html"><img src="socialsolentbox.jpg" alt="Work Preview 3"></a></div>
       </div>
       <div class="row">
         <div class="col three first"><a href="instalogo.html"><img src="img/insta/box.jpg" alt="Work Preview 1"></a></div>
